--- a/package.json
+++ b/package.json
@@ -3,7 +3,25 @@
   "version": "0.0.1",
   "description": "A minimal template for creating electron applications using the react framework along with webpack.",
   "main": "./src/main/index.js",
-  "scripts": {},
+  "scripts": {
+    "webpack-dev": "webpack --mode development"
+  },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "electron": "^8.1.0",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
+  }
 }
