--- a/package.json
+++ b/package.json
@@ -4,10 +4,26 @@
   "description": "A minimal template for creating electron applications using the react framework along with webpack.",
   "main": "./src/main/index.js",
   "scripts": {
-    "webpack-dev": "webpack --mode development"
+    "webpack-dev": "webpack --mode development",
+    "react-dev": "webpack-dev-server --mode development --port 3000",
+    "electron-dev": "cross-env ELECTRON_ENV=dev electron ./build/app.js",
+    "webpack-prod": "webpack --mode production",
+    "build-win": "electron-builder build --win -c.extraMetadata.main=./build/app.js --publish never"
   },
-  "author": "",
+  "author": "Arevi",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arevi/electron-react-webpack-boilerplate"
+  },
+  "build": {
+    "appId": "com.arevi.electron-react-webpack-boilerplate",
+    "files": [
+      "build/*",
+      "node_modules/**/*"
+    ],
+    "productName": "Electron React Webpack Boilerplate"
+  },
   "dependencies": {
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
@@ -17,11 +33,15 @@
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
     "electron": "^8.1.0",
+    "electron-builder": "^22.4.0",
+    "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
