--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-win": "electron-builder build --win -c.extraMetadata.main=./build/app.js --publish never"
   },
   "author": "Armin Dizdarevic",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/arevi/electron-react-javascript-boilerplate"
